tests/paczka1/fuzzy1/34656822.err
Error in line 1: xAOGZFuzDW A236 22,41
Error in line 3: xAOGZFuzDW S398 20,6
Error in line 5: xAOGZFuzDW S245 96,2
Error in line 20: S245 A603 37,4
Error in line 26: xAOGZFuzDW A236 35,4
Error in line 30: xAOGZFuzDW A603 3,6
Error in line 38: xAOGZFuzDW A236 73,7
